--- a/static/css/style.css
+++ b/static/css/style.css
@@ -558,6 +558,11 @@ h2 {
     .skill-tree ul {
         font-size: 1.75rem;
     }
+
+
+    .card {
+        padding-left: 10vw;
+    }
 }
 
 
@@ -579,12 +584,35 @@ h2 {
         font-size: 1rem;
     }
 
+
     .career-name {
         font-size: 1.75rem;
     }
 
     .education-list {
         font-size: 1.5rem;
+    }
+
+
+    .card {
+        font-size: 1rem;
+    }
+
+    .contact-item {
+        margin-bottom: 1em;
+        font-size: 1em;
+    }
+
+    .card .name-info {
+        font-size: 2em;
+    }
+    
+    .title-info {
+        font-size: 1em;
+    }
+
+    .footer {
+        font-size: 0.75rem;
     }
 }
 
