--- a/templates/projects/school-system.html
+++ b/templates/projects/school-system.html
@@ -14,7 +14,7 @@
 </head>
 <body class="body-bottom-space">
     <div class="wrapper">
-        <section class="section no-height no-padding no-width">
+        <section class="no-height no-padding no-width">
             <a href="/#projects">
                 <svg class="return-icon" height="20px" width="auto" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><title/><polyline points="112 160 48 224 112 288" style="fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"/><path d="M64,224H358c58.76,0,106,49.33,106,108v20" style="fill:none;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"/></svg>
             </a>
@@ -23,7 +23,7 @@
             <p class="man-content">School Analysis System</p>
         </section>
     
-        <section class="section no-height no-padding no-width">
+        <section class="no-height no-padding no-width">
             <h2 class="man-title">SYNOPSIS</h2>
             <p class="man-content">
                 A Django based web application designed to manage student information, academic records, and administrative processes. 
@@ -31,7 +31,7 @@
             </p>
         </section>
     
-        <section class="section no-height no-padding no-width">
+        <section class="no-height no-padding no-width">
             <h2 class="man-title">DESCRIPTION</h2>
             <p class="man-content">
                 One of the administrative sections of the school handled everything manually,
@@ -81,12 +81,12 @@
             </p>
         </section>
     
-        <section class="section no-height no-padding no-width">
+        <section class="no-height no-padding no-width">
             <h2 class="man-title">AUTHOR</h2>
             <p class="man-content">Brian Magaña</p>
         </section>
     
-        <section class="section no-height no-padding no-width">
+        <section class="no-height no-padding no-width">
             <h2 class="man-title">SEE ALSO</h2>
             <p class="man-content">
                 Link to repository: 
