Change cinemadd project's name

--- a/templates/projects/cinemadd.html
+++ b/templates/projects/cinemadd.html
@@ -20,7 +20,7 @@
         </a>
         <h1 class="code">$ man cinemadd</h1>
         <h2 class="man-title less-margin-title">NAME</h2>
-        <p class="man-content">Booking System CinemaDD</p>
+        <p class="man-content">Cinemadd - Cinema Booking Simulator</p>
     </section>
 
     <section class="no-height no-padding no-width">
